--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@jsonforms/core": "3.0.0-alpha.3",
-    "@jsonforms/material-renderers": "3.0.0-alpha.3",
-    "@jsonforms/react": "3.0.0-alpha.3",
+    "@jsonforms/core": "3.0.0-beta.3",
+    "@jsonforms/material-renderers": "3.0.0-beta.3",
+    "@jsonforms/react": "3.0.0-beta.3",
     "@mui/icons-material": "^5.2.0",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.2.2",
+    "@mui/lab": "5.0.0-alpha.82",
+    "@mui/material": "^5.8.6",
     "@mui/styles": "^5.2.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
